--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "redux-form": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
